--- a/IOT.html
+++ b/IOT.html
@@ -41,6 +41,9 @@
                             <option>전주 2호점</option>
                         </select>
                     </div>
+                    <!-- 테스트용 플러스 버튼 -->
+                    <button class="plus">플러스</button>
+                    <!-- //테스트용 플러스 버튼 -->
                 </div>
             </div>
             <div class="content_wrap">
@@ -99,6 +102,98 @@
                                 <div class="work_list">
                                     <p class="work_txt">Control Board Reset</p>
                                     <div class="active_button"><a href="#">버튼</a></div>
+                                </div>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/light.png" alt="light" width="48px" height="48px" />
+                                <p class="sub_title light">Light1</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch3" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch3">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <p class="sub_title light">Light2</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch4" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch4">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/aircon.png" alt="washer2" width="53px" height="48px" />
+                                <p class="sub_title aircon">Air Conditioner1</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch5" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch5">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <p class="sub_title aircon">Air Conditioner2</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch6" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch6">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/light.png" alt="light" width="48px" height="48px" />
+                                <p class="sub_title light">Light1</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch3" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch3">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <p class="sub_title light">Light2</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch4" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch4">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/aircon.png" alt="washer2" width="53px" height="48px" />
+                                <p class="sub_title aircon">Air Conditioner1</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch5" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch5">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                                <p class="sub_title aircon">Air Conditioner2</p>
+                                <div class="switch_wrap">
+                                    <div class="onoffswitch">
+                                        <input type="checkbox" name="onoffswitch" class="onoffswitch_checkbox" id="myonoffswitch6" checked>
+                                        <label class="onoffswitch_label" for="myonoffswitch6">
+                                            <span class="onoffswitch_inner"></span>
+                                            <span class="onoffswitch_switch"></span>
+                                        </label>
+                                    </div>
                                 </div>
                             </li>
                             <li class="content_card">
