--- a/메인.html
+++ b/메인.html
@@ -31,8 +31,7 @@
                                 <option>전주 1호점</option>
                                 <option>전주 2호점</option>
                             </select>
-                        </div>
-                    </div>
+                       </div>
                     <div class="my_menu">
                         <a href="#">내메뉴</a>
                     </div>
@@ -47,12 +46,48 @@
                         <li class="today_title">이번 달 매출</li>
                         <li class="today_title">₩ 1,500,000 (누적 ₩ 23,000,000)</li>
                     </ul>
+                    <!-- 테스트용 플러스 버튼 -->
+                        <button class="plus">플러스</button>
+                        <!-- //테스트용 플러스 버튼 -->
+                    </div>
                 </div>
             </div>
             <div class="content_wrap">
                 <div class="content_bg">
                     <div class="content_card_wrap">
                         <ul class="card_list">
+                            <li class="content_card">
+                                <img src="./images/bath1.png" alt="petbath1" width="47px" height="34px" />
+                                <p class="sub_title bath1">Pet bath1</p>
+                                <p class="sub_time">7분 21초</p>
+                                <p class="sub_etc">오늘 매출:50</p>
+                                <p class="sub_etc">기본 요금 / 횟수 : 40/8</p>
+                                <p class="sub_etc">추가 요금 / 횟수 : 20/10</p>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/bath2.png" alt="petbath2" width="47px" height="34px" />
+                                <p class="sub_title bath2">Pet bath2</p>
+                                <p class="sub_time">사용안함</p>
+                                <p class="sub_etc">오늘 매출:50</p>
+                                <p class="sub_etc">기본 요금 / 횟수 : 40/8</p>
+                                <p class="sub_etc">추가 요금 / 횟수 : 20/10</p>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/washer1.png" alt="washer1" width="40px" height="47px" />
+                                <p class="sub_title washer1">Washer</p>
+                                <p class="sub_time">7분 21초</p>
+                                <p class="sub_etc">오늘 매출:50</p>
+                                <p class="sub_etc">기본 요금 / 횟수 : 40/8</p>
+                                <p class="sub_etc">추가 요금 / 횟수 : 20/10</p>
+                            </li>
+                            <li class="content_card">
+                                <img src="./images/washer2.png" alt="washer2" width="40px" height="47px" />
+                                <p class="sub_title washer2">Dryer</p>
+                                <p class="sub_time">사용안함</p>
+                                <p class="sub_etc">오늘 매출:50</p>
+                                <p class="sub_etc">기본 요금 / 횟수 : 40/8</p>
+                                <p class="sub_etc">추가 요금 / 횟수 : 20/10</p>
+                            </li>
                             <li class="content_card">
                                 <img src="./images/bath1.png" alt="petbath1" width="47px" height="34px" />
                                 <p class="sub_title bath1">Pet bath1</p>
